# wqp

./: .env.example  .gitignore  .terraform.lock.hcl  Dockerfile  dagster.yaml  docker-compose.yml  empty.tfvars  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
docker/: entrypoint.sh
docker/container_monitor/: Dockerfile  go.mod  go.sum  main.go  readme.md
docker/dagster/: Dockerfile
docker/database/: Dockerfile
docker/frost/: Dockerfile  indices.sql  wait-for-frost-and-init-db.sh
docker/nginx/: nginx.conf
docker/pygeoapi/: pygeoapi.config.yml  wqp-location-oriented.j2
modules/dagster/: main.tf  outputs.tf  variables.tf
modules/database/: main.tf  outputs.tf  uid-ossp.sql  variables.tf
modules/frost/: main.tf  outputs.tf  variables.tf
modules/pygeoapi/: Dockerfile
src/: jobs.py
src/wqie/: __init__.py  assets.py  config.py  env.py  jobs.py  models.py  partitions.py  util.py
src/wqie/ops/: api.py  datastreams.py  fetch.py  transform.py
src/wqp/: __init__.py  env.py  jobs.py  mapping.py  models.py  partitions.py  util.py
src/wqp/ops/: datastreams.py  fetch.py  transform.py
