[project]
name = "wqie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-webserver>=1.9.4",
    "dagster>=1.9.4",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "pytest>=8.3.4",
    "pandas>=2.2.3",
    "frost-sta-client>=1.1.45",
    "debugpy>=1.8.11",
    "click>=8.1.7",
    "geojson>=3.1.0",
    "openpyxl>=3.1.5",
    "dagster-slack>=0.25.4",
    "pytest-dotenv>=0.5.2",
    "hypothesis>=6.122.5"
]

[tool.hatch.build.targets.wheel]
packages = ["src.wqie"]

[tool.dagster]
module_name = "wqie"

[tool.pytest.ini_options]
env_files = [
    ".env"
]
